package grpc_server

import (
	"context"

	pb "github.com/Kisanlink/aaa-service/pkg/proto"
	"go.uber.org/zap"
)

// PermissionHandler handles permission-related gRPC requests
type PermissionHandler struct {
	logger *zap.Logger
	pb.UnimplementedPermissionServiceV2Server
}

// NewPermissionHandler creates a new PermissionHandler
func NewPermissionHandler(logger *zap.Logger) *PermissionHandler {
	return &PermissionHandler{
		logger: logger,
	}
}

// CreatePermission creates a new permission
func (h *PermissionHandler) CreatePermission(ctx context.Context, req *pb.CreatePermissionRequestV2) (*pb.CreatePermissionResponseV2, error) {
	h.logger.Info("Creating permission", zap.String("name", req.Name))

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission creation not yet implemented")

	permission := &pb.PermissionV2{
		Id:          "temp_id",
		Name:        req.Name,
		Description: req.Description,
		Resource:    req.Resource,
		Effect:      "allow",
		Actions:     req.Actions,
		Status:      "active",
	}

	return &pb.CreatePermissionResponseV2{
		StatusCode: 501, // Not implemented
		Message:    "Permission creation not yet implemented",
		Permission: permission,
	}, nil
}

// GetPermission retrieves a permission by ID
func (h *PermissionHandler) GetPermission(ctx context.Context, req *pb.GetPermissionRequestV2) (*pb.PermissionV2, error) {
	h.logger.Info("Getting permission", zap.String("id", req.Id))

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission retrieval not yet implemented")

	return &pb.PermissionV2{
		Id:          req.Id,
		Name:        "temp_permission",
		Description: "Temporary permission",
		Resource:    "temp_resource",
		Effect:      "allow",
		Actions:     []string{"read"},
		Status:      "active",
	}, nil
}

// GetAllPermissions retrieves all permissions
func (h *PermissionHandler) GetAllPermissions(ctx context.Context, req *pb.GetAllPermissionsRequestV2) (*pb.GetAllPermissionsResponseV2, error) {
	h.logger.Info("Getting all permissions")

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission listing not yet implemented")

	return &pb.GetAllPermissionsResponseV2{
		StatusCode:  501, // Not implemented
		Message:     "Permission listing not yet implemented",
		Permissions: []*pb.PermissionV2{},
	}, nil
}

// UpdatePermission updates an existing permission
func (h *PermissionHandler) UpdatePermission(ctx context.Context, req *pb.UpdatePermissionRequestV2) (*pb.PermissionV2, error) {
	h.logger.Info("Updating permission", zap.String("id", req.Id))

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission update not yet implemented")

	return &pb.PermissionV2{
		Id:          req.Id,
		Name:        req.Name,
		Description: req.Description,
		Resource:    req.Resource,
		Effect:      "allow",
		Actions:     req.Actions,
		Status:      "active",
	}, nil
}

// DeletePermission deletes a permission
func (h *PermissionHandler) DeletePermission(ctx context.Context, req *pb.DeletePermissionRequestV2) (*pb.DeletePermissionResponseV2, error) {
	h.logger.Info("Deleting permission", zap.String("id", req.Id))

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission deletion not yet implemented")

	return &pb.DeletePermissionResponseV2{
		StatusCode: 501, // Not implemented
		Message:    "Permission deletion not yet implemented",
	}, nil
}

// EvaluatePermission evaluates if a user has permission for a resource/action
func (h *PermissionHandler) EvaluatePermission(ctx context.Context, req *pb.EvaluatePermissionRequestV2) (*pb.EvaluatePermissionResponseV2, error) {
	h.logger.Info("Evaluating permission", zap.String("user_id", req.UserId), zap.String("resource", req.Resource), zap.String("action", req.Action))

	// TODO: Implement when permission service is available
	h.logger.Warn("Permission evaluation not yet implemented")

	return &pb.EvaluatePermissionResponseV2{
		StatusCode:  501, // Not implemented
		Message:     "Permission evaluation not yet implemented",
		Allowed:     false,
		Permissions: []string{},
	}, nil
}
